[package]
name = "bevy_xpbd_2d"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [ "Joona Aalto <jondolf.dev@gmail.com>" ]
description = "A physics engine based on Extended Position Based Dynamics for the Bevy game engine"
documentation = "https://docs.rs/bevy_xpbd_2d"
repository = "https://github.com/Jondolf/bevy_xpbd"
readme = "README.md"
keywords = [ "gamedev", "physics", "simulation", "xpbd", "bevy" ]
categories = [ "game-development", "science", "simulation" ]

[features]
default = [ "2d", "f32", "simd" ]
2d = []
f32 = [ "dep:parry2d" ]
f64 = [ "dep:parry2d-f64" ]
debug-plugin = [ "dep:bevy_prototype_debug_lines" ]
simd = [ "parry2d?/simd-stable", "parry2d-f64?/simd-stable" ]
enhanced-determinism = [ "parry2d?/enhanced-determinism", "parry2d-f64?/enhanced-determinism" ]

[lib]
name = "bevy_xpbd_2d"
path = "../../src/lib.rs"
required-features = [ "2d" ]

[dependencies]
bevy_xpbd_derive = { path = "../bevy_xpbd_derive", version = "0.1" }
bevy = { version = "0.10.1", default-features = false }
bevy_prototype_debug_lines = { version = "0.10.1", optional = true }
parry2d = { version = "0.13.1", optional = true }
parry2d-f64 = { version = "0.13.1", optional = true }
nalgebra = { version = "0.32.2", features = [ "convert-glam023" ] }
derive_more = "0.99"

[dev-dependencies]
examples_common_2d = { path = "../examples_common_2d" }
approx = "0.5"
glam = { version = "0.23", features = [ "approx" ] }
insta = "1.0"
itertools = "0.10"

[[example]]
name = "chain_2d"
required-features = ["2d"]

[[example]]
name = "collision_layers"
required-features = ["2d"]

[[example]]
name = "fixed_joint_2d"
required-features = ["2d"]

[[example]]
name = "move_marbles"
required-features = ["2d"]

[[example]]
name = "prismatic_joint_2d"
required-features = ["2d"]

[[example]]
name = "revolute_joint_2d"
required-features = ["2d"]
