[package]
name = "bevy_xpbd_2d"
version = "0.4.2"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Joona Aalto <jondolf.dev@gmail.com>"]
description = "A physics engine based on Extended Position Based Dynamics for the Bevy game engine"
documentation = "https://docs.rs/bevy_xpbd_2d"
repository = "https://github.com/Jondolf/bevy_xpbd"
readme = "README.md"
keywords = ["gamedev", "physics", "simulation", "xpbd", "bevy"]
categories = ["game-development", "science", "simulation"]

[features]
default = ["2d", "f32", "parry-f32", "debug-plugin", "parallel"]
2d = []
f32 = []
f64 = []

debug-plugin = ["bevy/bevy_gizmos", "bevy/bevy_render"]
simd = ["parry2d?/simd-stable", "parry2d-f64?/simd-stable"]
parallel = ["parry2d?/parallel", "parry2d-f64?/parallel"]
enhanced-determinism = [
    "parry2d?/enhanced-determinism",
    "parry2d-f64?/enhanced-determinism",
    "bevy_math/libm",
]

default-collider = ["dep:nalgebra"]
# We unfortunately can't reuse the f32 and f64 features for this,
# because Parry uses separate crates for f32 and f64.
parry-f32 = ["f32", "dep:parry2d", "default-collider"]
parry-f64 = ["f64", "dep:parry2d-f64", "default-collider"]

serialize = [
    "dep:serde",
    "bevy/serialize",
    "parry2d?/serde-serialize",
    "parry2d-f64?/serde-serialize",
]

[lib]
name = "bevy_xpbd_2d"
path = "../../src/lib.rs"
required-features = ["2d"]

[dependencies]
bevy_xpbd_derive = { path = "../bevy_xpbd_derive", version = "0.1" }
bevy = { version = "0.13", default-features = false }
bevy_math = "0.13"
parry2d = { version = "0.13", optional = true }
parry2d-f64 = { version = "0.13", optional = true }
nalgebra = { version = "0.32", features = ["convert-glam025"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
derive_more = "0.99"
indexmap = "2.0.0"
fxhash = "0.2.1"
itertools = "0.12"

[dev-dependencies]
examples_common_2d = { path = "../examples_common_2d" }
bevy_math = { version = "0.13", features = ["approx"] }
approx = "0.5"
insta = "1.0"

[[example]]
name = "dynamic_character_2d"
required-features = ["2d", "default-collider"]

[[example]]
name = "kinematic_character_2d"
required-features = ["2d", "default-collider"]

[[example]]
name = "chain_2d"
required-features = ["2d", "default-collider"]

[[example]]
name = "collision_layers"
required-features = ["2d", "default-collider"]

[[example]]
name = "custom_collider"
required-features = ["2d"]

[[example]]
name = "fixed_joint_2d"
required-features = ["2d", "default-collider"]

[[example]]
name = "move_marbles"
required-features = ["2d", "default-collider"]

[[example]]
name = "prismatic_joint_2d"
required-features = ["2d", "default-collider"]

[[example]]
name = "ray_caster"
required-features = ["2d", "default-collider"]

[[example]]
name = "revolute_joint_2d"
required-features = ["2d", "default-collider"]
