[package]
name = "bevy_xpbd_3d"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [ "Joona Aalto <jondolf.dev@gmail.com>" ]
description = "A physics engine based on Extended Position Based Dynamics for the Bevy game engine"
documentation = "https://docs.rs/bevy_xpbd_3d"
repository = "https://github.com/Jondolf/bevy_xpbd"
readme = "README.md"
keywords = [ "gamedev", "physics", "simulation", "xpbd", "bevy" ]
categories = [ "game-development", "science", "simulation" ]

[features]
default = [ "3d", "f32" ]
3d = []
f32 = [ "dep:parry3d" ]
f64 = [ "dep:parry3d-f64" ]
debug-plugin = [ "dep:bevy_prototype_debug_lines", "examples_common_3d/debug-plugin" ]
simd = [ "parry3d?/simd-stable", "parry3d-f64?/simd-stable" ]
enhanced-determinism = [ "parry3d?/enhanced-determinism", "parry3d-f64?/enhanced-determinism" ]

[lib]
name = "bevy_xpbd_3d"
path = "../../src/lib.rs"
required-features = [ "3d" ]

[dependencies]
bevy_xpbd_derive = { path = "../bevy_xpbd_derive", version = "0.1" }
bevy = { version = "0.10.1", default-features = false, features = [ "bevy_render" ] }
bevy_prototype_debug_lines = { version = "0.10.1", optional = true, features = [ "3d" ] }
parry3d = { version = "0.13.1", optional = true }
parry3d-f64 = { version = "0.13.1", optional = true }
nalgebra = { version = "0.32.2", features = [ "convert-glam023" ] }
derive_more = "0.99"

[dev-dependencies]
examples_common_3d = { path = "../examples_common_3d" }
approx = "0.5"
glam = { version = "0.23", features = [ "approx" ] }
insta = "1.0"
itertools = "0.10"

[[example]]
name = "chain_3d"
required-features = ["3d"]

[[example]]
name = "cubes"
required-features = ["3d"]

[[example]]
name = "fixed_joint_3d"
required-features = ["3d"]

[[example]]
name = "prismatic_joint_3d"
required-features = ["3d"]

[[example]]
name = "revolute_joint_3d"
required-features = ["3d"]

[[example]]
name = "custom_broad_phase"
required-features = ["3d"]

[[example]]
name = "custom_constraint"
required-features = ["3d"]
