[package]
name = "bevy_xpbd_derive"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Joona Aalto <jondolf.dev@gmail.com>"]
description = "Deprecated, use `avian_derive` instead. Provides derive implementations for Bevy XPBD"
repository = "https://github.com/Jondolf/bevy_xpbd"
readme = "README.md"

[badges]
maintenance = { status = "deprecated" }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0"
syn = "2.0"
