[package]
name = "examples_common_3d"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.10.1", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_text",
    "bevy_ui",
    "bevy_asset",
    "bevy_render",
    "bevy_sprite",
    "bevy_pbr",
    "bevy_winit",
    "x11", # github actions runners don't have libxkbcommon installed, so can't use wayland
] }
bevy_screen_diagnostics = "0.2"
bevy-inspector-egui = "0.18"
bevy_xpbd_3d = { path = "../bevy_xpbd_3d", default-features = false }
