[package]
name = "examples_common_3d_f64"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.10", default-features = false, features = [
    "bevy_pbr",
    "bevy_winit",
    "x11", # github actions runners don't have libxkbcommon installed, so can't use wayland
] }
bevy-inspector-egui = "0.18"
bevy_xpbd_3d_f64 = { path = "../bevy_xpbd_3d_f64" }
